# dead_simple_owl_design_patterns

./: .gitignore  .travis.yml  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  pom.xml  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml
cite/: index.html
docs/: cite.md  index.md
document/: index.html
dosdp_schema/: index.html
json/: draft_json_example.json  import_into_cell.json
overview/: index.html
patterns/: adenine_import_across_plasma_membrane.md  bounding_membrane_of_organelle.json  bounding_membrane_of_organelle.yaml  envenomation.json  envenomation.md  envenomation.yaml  export_across_membrane.json  export_across_membrane.md  export_across_membrane.yaml  expression_pattern.json  expression_pattern.yaml  extrinsic_membrane_component.json  generic_go_pattern_outline.yaml  generic_obo_dosdp_outline.yaml  import_across_membrane.json  import_across_membrane.md  import_across_membrane.yaml  import_across_plasma_membrane.json  import_across_plasma_membrane.md  import_across_plasma_membrane.yaml  import_into_cell.json  import_into_cell.md  import_into_cell.yaml  integral_membrane_component.json  integral_membrane_component.yaml  intrinsic_membrane_component.json  intrinsic_membrane_component.md  intrinsic_membrane_component.yaml  membrane_spanning_component.json  membrane_spanning_component.md  membrane_spanning_component.yaml  transmembrane_import_into_cell.json  transmembrane_import_into_cell.md
search/: search_index.json
spec/: DOSDP_OBO_fields.yaml  DOSDP_convenience_fields.yaml  DOSDP_mapping_schema.json  DOSDP_spec.json  (+10 more)
(+100 files in other folders)
