[metadata]
name = dosdp
version = 0.0.1
description = The aim of this project is to specify a simple OWL design pattern system that can easily be consumed, whatever your code base.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/INCATools/dead_simple_owl_design_patterns
author = INCATools
project_urls =
    Bug Tracker = https://github.com/INCATools/dead_simple_owl_design_patterns/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
